# aihook

./: .gitignore  LICENSE  MANIFEST.in  README.md  SKILL.md  implementation-plan.md  improvement-plan.md  pyproject.toml  requirements.txt  tool-description.md
src/aihook/: SKILL.md  __init__.py  cli.py  core.py  release.py
src/aihook/learnings/: README.md
tests/: conftest.py  test_core.py  test_integration.py  the-test-script.py
