[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[project]


name = "aihook"
description = "interactive embedded shell for agents "
# my email domain is posteo.de
authors=[{name = "Carsten Knoll", email = "firstname.lastname@domain.org"}]
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"

dynamic = ["dependencies", "version"]

classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]


[project.urls]
Homepage = "https://github.com/cknoll/aihook"
Repository = "https://github.com/cknoll/aihook"

[project.scripts]
aihook = "aihook.cli:main"

[tool.setuptools.packages.find]
# note: `include-package-data = true` by default in pyproject.toml
where = ["src"]

# siginificantly speed up pytest
[tool.pytest.ini_options]
testpaths = [ "tests"]

# see https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#attr
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {attr = "aihook.__version__"}
